--- a/src/styles.css
+++ b/src/styles.css
@@ -8,19 +8,73 @@ body{
 }
 
 nav{
-    background-color: red;
+    background-color: aliceblue;
     grid-column: 1 / 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
 }
+    nav form{
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        gap: 1rem;
+        border: 3px solid rgb(116, 192, 255);
+        padding: 2rem;
+    }
+
 main{
-    background-color: aquamarine;
+    background-color: rgb(116, 192, 255);
     grid-column: 2 / 4;
+    display: flex;
+    flex-wrap: wrap
 }
+    .taskContainerCard{
+        display: flex;
+        flex: 1;
+        gap: 5%;
+        padding: 3%;
+    }
+    .taskContainerCard button{
+        width: 2rem;
+        height: 2rem;
+    }
 
 aside{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    background-color: rebeccapurple;
+    background-color: aliceblue;
+    padding: 1rem;
+    align-items: center;
 }
+    aside form{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        flex: 0;
+        width: 100%;
+        align-items: center;
+        gap: 1rem;
+    }
+    aside form input{
+        width: 100%;
+        height: 30px;
+    }
+
+    aside form div label{
+        width: 100%;
+        font-size: 2rem;
+    }
+    aside form button{
+        width: 100%;
+        font-size: 2rem;
+    }
+.inputContainer{
+    width: 100%;
+    text-align: center;
+}
+
 footer{
     background-color: bisque;
     grid-column: 1 / 4;
