--- a/src/styles.css
+++ b/src/styles.css
@@ -22,21 +22,50 @@ nav{
         gap: 1rem;
         border: 3px solid rgb(116, 192, 255);
         padding: 2rem;
+        flex-wrap: wrap;
     }
+    .inputContainerTask input{
+        width: 100%;
+        height: 3rem;
+        background-color: aliceblue;
+        border: 2px black solid;
+        border-radius: 1rem;
+    }
+    .inputContainerTask{
+        text-align: center;
+        font-size: 2rem;
+    }
+    nav form button{
+        font-size: 2rem;
+        outline: none;
+        border: none;
+        background: lightblue;
+        border-radius: 1rem;
+        padding: 1rem;
+    }
+
 
 main{
     background-color: rgb(116, 192, 255);
     grid-column: 2 / 4;
     display: flex;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    justify-content: center;
 }
     .taskContainerCard{
         display: flex;
-        flex: 1;
+        flex: 0 ;
         gap: 5%;
         padding: 3%;
     }
-    .taskContainerCard button{
+    .taskContainerCard div{
+        padding: 3%;
+        border: 2px black solid;
+        height: 300px;
+        width: 225px;
+        text-align: center;
+    }
+    .taskContainerCard div button{
         width: 2rem;
         height: 2rem;
     }
@@ -59,7 +88,10 @@ aside{
     }
     aside form input{
         width: 100%;
-        height: 30px;
+        height: 3rem;
+        background-color: aliceblue;
+        border: 2px black solid;
+        border-radius: 1rem;
     }
 
     aside form div label{
@@ -69,13 +101,42 @@ aside{
     aside form button{
         width: 100%;
         font-size: 2rem;
+        outline: none;
+        border: none;
+        background: lightblue;
+        border-radius: 1rem;
+        padding: 1rem;   
     }
+#ASIDETASKS{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    width: 100%;
+    gap: 1rem;
+}
+
+#ASIDETASKS button{
+    font-size: 2rem;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+
 .inputContainer{
     width: 100%;
     text-align: center;
 }
 
 footer{
-    background-color: bisque;
+    background-color: hsl(208, 100%, 97%);
     grid-column: 1 / 4;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: monospace;
+    font-size: 2rem;
 }
